Filtered, Player, Locale

--- a/locale/en/locale_en.cfg
+++ b/locale/en/locale_en.cfg
@@ -12,8 +12,8 @@ teleport-ts-button=Energy!
 teleport-ts-button-shortcut=Open the teleport interface
 
 [mod-setting-name]
-teleport-ts-x-distance-displacement=Add a margin to the destination coordinates (horizzontal)
+teleport-ts-x-distance-displacement=Add a margin to the destination coordinates (horizontal)
 teleport-ts-y-distance-displacement=Add a margin to the destination coordinates (vertical)
 
 [controls]
-teleport-to-train-station=Open the teleport interface
+teleport-to-train-station-hotkey=Open the teleport interface
