adding missing locale string

--- a/locale/en/locale_en.cfg
+++ b/locale/en/locale_en.cfg
@@ -14,6 +14,7 @@ teleport-ts-button-shortcut=Open the teleport interface
 [mod-setting-name]
 teleport-ts-x-distance-displacement=Add a margin to the destination coordinates (horizontal)
 teleport-ts-y-distance-displacement=Add a margin to the destination coordinates (vertical)
+teleport-ts-station-list-vertical-size=Number of train stations to show at one time
 
 [controls]
 teleport-to-train-station-hotkey=Open the teleport interface
