--- a/locale/it/locale_it.cfg
+++ b/locale/it/locale_it.cfg
@@ -14,6 +14,7 @@ teleport-ts-button-shortcut=Apre l'interfaccia del Teletrasporto
 [mod-setting-name]
 teleport-ts-x-distance-displacement=Aggiunge un margine alle coordinate di destinazione (orizzontale)
 teleport-ts-y-distance-displacement=Aggiunge un margine alle coordinate di destinazione (verticale)
+teleport-ts-station-list-vertical-size=Numero totale di fermate da visualizzare alla volta
 
 [controls]
 teleport-to-train-station-hotkey=Apre l'interfaccia del Teletrasporto
