added draft for cycling through homonyms stations

--- a/locale/en/locale_en.cfg
+++ b/locale/en/locale_en.cfg
@@ -7,6 +7,7 @@ teleport-ts-gui-dd-caption=Train Stations list
 teleport-ts-gui-dd-empty-caption=No train stations found, d'oh!
 teleport-ts-gui-dd-filter-label=Search Station
 teleport-ts-button=Energy!
+teleport-ts-button-more=Energy! >>
 
 [shortcut-name]
 teleport-ts-button-shortcut=Open the teleport interface
