--- a/locale/it/locale_it.cfg
+++ b/locale/it/locale_it.cfg
@@ -7,6 +7,7 @@ teleport-ts-gui-dd-caption=Lista delle fermate
 teleport-ts-gui-dd-empty-caption=Nessuna fermata trovata!
 teleport-ts-gui-dd-filter-label=Cerca fermata
 teleport-ts-button=Energia!
+teleport-ts-button-more=Energia! >>
 
 [shortcut-name]
 teleport-ts-button-shortcut=Apre l'interfaccia del Teletrasporto
